# wordle

./: .env  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  pyproject.toml
backend/app/: crud.py  initial_data.py  main.py  models.py  schemes.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 8b45a287c2cc_startup_migration.py  a0949fde6af2_fix_game_deletion_cascade.py  c64fddb18b08_startup_migration.py  d52f4de98631_initial_migration.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: game.py
backend/app/core/: db.py  init_db.py
backend/app/game_utils/: color_scheme.py  game_state.py
frontend/: .dockerignore  Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json
frontend/src/: App.js
frontend/src/client/: requests.js
frontend/src/components/: GameItem.jsx  GamesActionBar.jsx  GamesFrame.jsx  GamesList.jsx  GuessActionBar.jsx  GuessFrame.jsx  GuessItem.jsx  GuessList.jsx  Header.jsx
frontend/src/components/common/: CustomInput.jsx  ItemCard.jsx  ListCard.jsx
scripts/: run_alembic.sh  run_development.sh  run_docker_logs.sh  run_production.sh
